# HuaweiFirmwareTool

./: CMakeLists.txt  README.md  huawei_header.h  hw_fmw.cpp  hw_sign.cpp  hw_verify.cpp  util.cpp  util.h  util.hpp  util_hw.cpp  util_hw.h  util_hw.hpp  util_rsa.cpp  util_rsa.h  util_rsa.hpp
